@@ -1,3 +1,13 @@
+2003-09-08  Steffen Pingel  <squig@users.sourceforge.net>
+
+	* canvasview.cpp (contentsMousePressEvent): Fixed popup menu
+	position when scrolled.
+
+	* connectaction.cpp (activeItem): Mark all pins during connect,
+	snap to pins.
+
+	* settings.cpp: Added color settings.
+
 2003-09-07  Steffen Pingel  <squig@users.sourceforge.net>
 
 	* mainwindow.cpp (editPaste): Made copy and paste work.
